--- a/index.html
+++ b/index.html
@@ -3,43 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="style/styles.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link
-      rel="shortcut icon"
-      href="./img/pizza_6978255.png"
-      type="image/x-icon"
-    />
-    
-    <title>La pizza pizza</title>
+    <link rel="shortcut icon" href="img/icon.png" type="image/x-icon" />
+
+    <title>Aux Vivres</title>
   </head>
   <body>
-    <!-- cabecera -->
+    <!-- Cabecera -->
     <header class="header">
       <div class="cont-logo">
-        <img src="./img/pizza.png" class="logo-restaurante" alt="" />
-        <p>la pizza pizza</p>
+        <img src="img/icon.png" alt="Logo restaurante" />
+        <p>Aux Vivres</p>
       </div>
 
       <nav class="nav-bar">
-        <!-- ancla llamada celular -->
-        <a href="tel:+57311111111">
+        <a href="tel:+57313688198">
           <i class="bx bx-phone"></i>
-          Celular
+          +57 313688198
         </a>
-        <!-- ancla mensaje whatsapp -->
+
         <a
-          href="https://api.whatsapp.com/send/?phone=311111111&text=QUIERO UNA PIZZA!!!"
+          href="https://api.whatsapp.com/send/?phone=3136881998&text=Hola, quiero una pizza."
           target="_blank"
         >
           <i class="bx bxl-whatsapp"></i>
           Whatsapp
         </a>
-        <!-- ancla instagram -->
-        <a href="https://www.instagram.com/pizza/?hl=es">
+
+        <a href="https://www.instagram.com/" target="_blank">
           <i class="bx bxl-instagram"></i>
           Instagram
         </a>
@@ -48,21 +43,20 @@
       <div></div>
     </header>
 
-    <!-- navbar moviles -->
-    <section class="nav-bar-mobile">
-      <!-- ancla llamada celular -->
-      <a href="tel:+573113293435">
+    <!-- SOCIAL RED MOBILE -->
+    <section class="navbar-mobile">
+      <a href="tel:+57313688198">
         <i class="bx bx-phone"></i>
       </a>
-      <!-- ancla mensaje whatsapp -->
+
       <a
-        href="https://api.whatsapp.com/send/?phone=3113293435&text=QUIERO UNA PIZZA!!!"
+        href="https://api.whatsapp.com/send/?phone=3136881998&text=Hola, quiero una pizza."
         target="_blank"
       >
         <i class="bx bxl-whatsapp"></i>
       </a>
-      <!-- ancla instagram -->
-      <a href="https://www.instagram.com/pizza/?hl=es">
+
+      <a href="https://www.instagram.com/" target="_blank">
         <i class="bx bxl-instagram"></i>
       </a>
     </section>
@@ -70,16 +64,18 @@
     <section class="banner">
       <div class="banner-cont">
         <h3>Dishes in</h3>
-        <h2>One Click!</h2>
+        <h2>One Click !</h2>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia,
-          excepturi ex. Libero doloremque ducimus et eligendi? Non minima hic
-          autem.
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore
+          numquam excepturi maiores tenetur suscipit, in est odio quod.
+          Doloribus, officiis. Corrupti atque earum rerum ipsa excepturi ducimus
+          quia!
         </p>
         <a href="#" class="btn-home">Order Now!</a>
       </div>
+
       <div class="banner-img">
-        <img src="img/pizza.webp" alt="imagen pizza" />
+        <img src="img/pizza.webp" alt="Imagen de Pizza" />
       </div>
     </section>
   </body>
