--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
     />
     <link rel="shortcut icon" href="img/icon.png" type="image/x-icon" />
 
-    <title>Aux Vivres</title>
+    <title>PizzaPIZZA</title>
   </head>
   <body>
     <!-- Cabecera -->
     <header class="header">
       <div class="cont-logo">
         <img src="img/icon.png" alt="Logo restaurante" />
-        <p>Aux Vivres</p>
+        <p>Pizza Pizza</p>
       </div>
 
       <nav class="nav-bar">
-        <a href="tel:+57313688198">
+        <a href="tel:+573001234567">
           <i class="bx bx-phone"></i>
-          +57 313688198
+          +57 300 1234567
         </a>
 
         <a
-          href="https://api.whatsapp.com/send/?phone=3136881998&text=Hola, quiero una pizza."
+          href="https://api.whatsapp.com/send/?phone=3001234567&text=Hola, quiero una pizza."
           target="_blank"
         >
           <i class="bx bxl-whatsapp"></i>
