--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style/styles.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="img/icon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./img/icon.png" type="image/x-icon" />
 
     <title>PizzaPIZZA</title>
   </head>
@@ -16,7 +16,7 @@
     <!-- Cabecera -->
     <header class="header">
       <div class="cont-logo">
-        <img src="img/icon.png" alt="Logo restaurante" />
+        <img src="./img/icon.png" alt="Logo restaurante" />
         <p>Pizza Pizza</p>
       </div>
 
