--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="./img/icon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./img/pizza_6978255.png" type="image/x-icon" />
 
     <title>PizzaPIZZA</title>
   </head>
@@ -16,7 +16,7 @@
     <!-- Cabecera -->
     <header class="header">
       <div class="cont-logo">
-        <img src="./img/icon.png" alt="Logo restaurante" />
+        <img src="./img/pizza.png" alt="Logo restaurante" />
         <p>Pizza Pizza</p>
       </div>
 
